// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format with custom refuse works 1`] = `
Array [
  Object {
    "cmd": Object {
      "payload": "1",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 1,
    "selectionStart": 1,
    "value": "1",
    "withCaret": "1|",
  },
  Object {
    "cmd": Object {
      "payload": "46",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 3,
    "selectionStart": 3,
    "value": "146",
    "withCaret": "146|",
  },
  Object {
    "cmd": Object {
      "payload": -2,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 1,
    "selectionStart": 1,
    "value": "146",
    "withCaret": "1|46",
  },
  Object {
    "cmd": Object {
      "payload": "23",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 4,
    "selectionStart": 4,
    "value": "12’346",
    "withCaret": "12’3|46",
  },
  Object {
    "cmd": Object {
      "payload": 1,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 5,
    "selectionStart": 5,
    "value": "12’346",
    "withCaret": "12’34|6",
  },
  Object {
    "cmd": Object {
      "payload": "5",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 6,
    "selectionStart": 6,
    "value": "123’456",
    "withCaret": "123’45|6",
  },
  Object {
    "cmd": Object {
      "payload": -2,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 4,
    "selectionStart": 4,
    "value": "123’456",
    "withCaret": "123’|456",
  },
  Object {
    "cmd": Object {
      "payload": "9",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 5,
    "selectionStart": 5,
    "value": "1’239’456",
    "withCaret": "1’239|’456",
  },
  Object {
    "cmd": Object {
      "payload": "8",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 6,
    "selectionStart": 6,
    "value": "12’398’456",
    "withCaret": "12’398|’456",
  },
  Object {
    "cmd": Object {
      "type": "BACKSPACE",
    },
    "selectionEnd": 5,
    "selectionStart": 5,
    "value": "1’239’456",
    "withCaret": "1’239|’456",
  },
  Object {
    "cmd": Object {
      "type": "BACKSPACE",
    },
    "selectionEnd": 3,
    "selectionStart": 3,
    "value": "123’456",
    "withCaret": "123|’456",
  },
  Object {
    "cmd": Object {
      "payload": 1,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 4,
    "selectionStart": 4,
    "value": "123’456",
    "withCaret": "123’|456",
  },
  Object {
    "cmd": Object {
      "type": "BACKSPACE",
    },
    "selectionEnd": 3,
    "selectionStart": 3,
    "value": "123’456",
    "withCaret": "123|’456",
  },
  Object {
    "cmd": Object {
      "payload": 100,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 7,
    "selectionStart": 7,
    "value": "123’456",
    "withCaret": "123’456|",
  },
  Object {
    "cmd": Object {
      "type": "BACKSPACE",
    },
    "selectionEnd": 6,
    "selectionStart": 6,
    "value": "12’345",
    "withCaret": "12’345|",
  },
  Object {
    "cmd": Object {
      "payload": -100,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 0,
    "selectionStart": 0,
    "value": "12’345",
    "withCaret": "|12’345",
  },
  Object {
    "cmd": Object {
      "payload": 1,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 1,
    "selectionStart": 1,
    "value": "12’345",
    "withCaret": "1|2’345",
  },
  Object {
    "cmd": Object {
      "type": "BACKSPACE",
    },
    "selectionEnd": 0,
    "selectionStart": 0,
    "value": "2’345",
    "withCaret": "|2’345",
  },
  Object {
    "cmd": Object {
      "payload": "1",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 1,
    "selectionStart": 1,
    "value": "12’345",
    "withCaret": "1|2’345",
  },
  Object {
    "cmd": Object {
      "payload": "x",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 1,
    "selectionStart": 1,
    "value": "12’345",
    "withCaret": "1|2’345",
  },
  Object {
    "cmd": Object {
      "payload": 100,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 6,
    "selectionStart": 6,
    "value": "12’345",
    "withCaret": "12’345|",
  },
  Object {
    "cmd": Object {
      "payload": ".",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 7,
    "selectionStart": 7,
    "value": "12’345.",
    "withCaret": "12’345.|",
  },
  Object {
    "cmd": Object {
      "payload": "0",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 8,
    "selectionStart": 8,
    "value": "12’345.0",
    "withCaret": "12’345.0|",
  },
  Object {
    "cmd": Object {
      "payload": "0",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 9,
    "selectionStart": 9,
    "value": "12’345.00",
    "withCaret": "12’345.00|",
  },
  Object {
    "cmd": Object {
      "payload": -2,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 7,
    "selectionStart": 7,
    "value": "12’345.00",
    "withCaret": "12’345.|00",
  },
  Object {
    "cmd": Object {
      "type": "BACKSPACE",
    },
    "selectionEnd": 7,
    "selectionStart": 7,
    "value": "1’234’500",
    "withCaret": "1’234’5|00",
  },
  Object {
    "cmd": Object {
      "payload": -1,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 6,
    "selectionStart": 6,
    "value": "1’234’500",
    "withCaret": "1’234’|500",
  },
  Object {
    "cmd": Object {
      "payload": ".",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 6,
    "selectionStart": 6,
    "value": "1’234.50",
    "withCaret": "1’234.|50",
  },
  Object {
    "cmd": Object {
      "payload": -3,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 3,
    "selectionStart": 3,
    "value": "1’234.50",
    "withCaret": "1’2|34.50",
  },
  Object {
    "cmd": Object {
      "payload": ".",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 3,
    "selectionStart": 3,
    "value": "12.34",
    "withCaret": "12.|34",
  },
  Object {
    "cmd": Object {
      "payload": -1,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 2,
    "selectionStart": 2,
    "value": "12.34",
    "withCaret": "12|.34",
  },
  Object {
    "cmd": Object {
      "type": "BACKSPACE",
    },
    "selectionEnd": 1,
    "selectionStart": 1,
    "value": "1.34",
    "withCaret": "1|.34",
  },
  Object {
    "cmd": Object {
      "type": "BACKSPACE",
    },
    "selectionEnd": 0,
    "selectionStart": 0,
    "value": "0.34",
    "withCaret": "|0.34",
  },
]
`;

exports[`format works 1`] = `
Array [
  Object {
    "cmd": Object {
      "payload": "1",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 1,
    "selectionStart": 1,
    "value": "1",
    "withCaret": "1|",
  },
  Object {
    "cmd": Object {
      "payload": "46",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 3,
    "selectionStart": 3,
    "value": "146",
    "withCaret": "146|",
  },
  Object {
    "cmd": Object {
      "payload": -2,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 1,
    "selectionStart": 1,
    "value": "146",
    "withCaret": "1|46",
  },
  Object {
    "cmd": Object {
      "payload": "23",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 4,
    "selectionStart": 4,
    "value": "12,346",
    "withCaret": "12,3|46",
  },
  Object {
    "cmd": Object {
      "payload": 1,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 5,
    "selectionStart": 5,
    "value": "12,346",
    "withCaret": "12,34|6",
  },
  Object {
    "cmd": Object {
      "payload": "5",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 6,
    "selectionStart": 6,
    "value": "123,456",
    "withCaret": "123,45|6",
  },
  Object {
    "cmd": Object {
      "payload": -2,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 4,
    "selectionStart": 4,
    "value": "123,456",
    "withCaret": "123,|456",
  },
  Object {
    "cmd": Object {
      "payload": "9",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 5,
    "selectionStart": 5,
    "value": "1,239,456",
    "withCaret": "1,239|,456",
  },
  Object {
    "cmd": Object {
      "payload": "8",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 6,
    "selectionStart": 6,
    "value": "12,398,456",
    "withCaret": "12,398|,456",
  },
  Object {
    "cmd": Object {
      "type": "BACKSPACE",
    },
    "selectionEnd": 5,
    "selectionStart": 5,
    "value": "1,239,456",
    "withCaret": "1,239|,456",
  },
  Object {
    "cmd": Object {
      "type": "BACKSPACE",
    },
    "selectionEnd": 3,
    "selectionStart": 3,
    "value": "123,456",
    "withCaret": "123|,456",
  },
  Object {
    "cmd": Object {
      "payload": 1,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 4,
    "selectionStart": 4,
    "value": "123,456",
    "withCaret": "123,|456",
  },
  Object {
    "cmd": Object {
      "type": "BACKSPACE",
    },
    "selectionEnd": 3,
    "selectionStart": 3,
    "value": "123,456",
    "withCaret": "123|,456",
  },
  Object {
    "cmd": Object {
      "payload": 100,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 7,
    "selectionStart": 7,
    "value": "123,456",
    "withCaret": "123,456|",
  },
  Object {
    "cmd": Object {
      "type": "BACKSPACE",
    },
    "selectionEnd": 6,
    "selectionStart": 6,
    "value": "12,345",
    "withCaret": "12,345|",
  },
  Object {
    "cmd": Object {
      "payload": -100,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 0,
    "selectionStart": 0,
    "value": "12,345",
    "withCaret": "|12,345",
  },
  Object {
    "cmd": Object {
      "payload": 1,
      "type": "MOVE_CARET",
    },
    "selectionEnd": 1,
    "selectionStart": 1,
    "value": "12,345",
    "withCaret": "1|2,345",
  },
  Object {
    "cmd": Object {
      "type": "BACKSPACE",
    },
    "selectionEnd": 0,
    "selectionStart": 0,
    "value": "2,345",
    "withCaret": "|2,345",
  },
  Object {
    "cmd": Object {
      "payload": "1",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 1,
    "selectionStart": 1,
    "value": "12,345",
    "withCaret": "1|2,345",
  },
  Object {
    "cmd": Object {
      "payload": "x",
      "type": "PUT_SYMBOL",
    },
    "selectionEnd": 1,
    "selectionStart": 1,
    "value": "12,345",
    "withCaret": "1|2,345",
  },
]
`;
